cmake_minimum_required (VERSION 2.8)

set (CMAKE_USER_MAKE_RULES_OVERRIDE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/c_overrides.cmake)
set (CMAKE_USER_MAKE_RULES_OVERRIDE_CXX ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cxx_overrides.cmake)

project (lw)

if (WIN32)
	set (CMAKE_EXE_LINKER_FLAGS_DEBUG				"/ENTRY:mainCRTStartup /DEBUG /INCREMENTAL" CACHE STRING "" FORCE)
	set (CMAKE_EXE_LINKER_FLAGS_MINSIZEREL			"/ENTRY:mainCRTStartup /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_EXE_LINKER_FLAGS_RELEASE				"/ENTRY:mainCRTStartup /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO		"/ENTRY:mainCRTStartup /DEBUG /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_MODULE_LINKER_FLAGS_DEBUG			"/ENTRY:mainCRTStartup /DEBUG /INCREMENTAL" CACHE STRING "" FORCE)
	set (CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL		"/ENTRY:mainCRTStartup /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_MODULE_LINKER_FLAGS_RELEASE			"/ENTRY:mainCRTStartup /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO	"/ENTRY:mainCRTStartup /DEBUG /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_SHARED_LINKER_FLAGS_DEBUG			"/ENTRY:mainCRTStartup /DEBUG /INCREMENTAL" CACHE STRING "" FORCE)
	set (CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL		"/ENTRY:mainCRTStartup /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_SHARED_LINKER_FLAGS_RELEASE			"/ENTRY:mainCRTStartup /INCREMENTAL:NO" CACHE STRING "" FORCE)
	set (CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO	"/ENTRY:mainCRTStartup /DEBUG /INCREMENTAL:NO" CACHE STRING "" FORCE)
endif (WIN32)

option(DEMO "Build a demo version." OFF)
option(OPTIMIZE_SOFTWARE "Build with an eye towards optimization of software implementations." OFF)

if (OPTIMIZE_SOFTWARE)
	add_definitions(-DTINKER_OPTIMIZE_SOFTWARE)
endif (OPTIMIZE_SOFTWARE)

if (CMAKE_COMPILER_IS_GNUCC)
	add_definitions(-std=c++0x)
endif (CMAKE_COMPILER_IS_GNUCC)

if (WIN32)
	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
	add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
	add_definitions(-D_CRT_NON_CONFORMING_SWPRINTFS)
	add_definitions(-D_CHAR16T)
	add_definitions(-D_UNICODE)
	add_definitions(-DGLEW_STATIC)
	add_definitions(-DFREEGLUT_STATIC)
	add_definitions(-DFTGL_LIBRARY_STATIC)
endif (WIN32)

if (CMAKE_BUILD_TYPE MATCHES Debug)
	add_definitions(-D_DEBUG)
endif (CMAKE_BUILD_TYPE MATCHES Debug)

if (DEMO)
	add_definitions(-DTINKER_NO_REGISTRATION)
else (DEMO)
	add_definitions(-DTINKER_UNLOCKED)
	add_definitions(-DTINKER_NO_REGISTRATION)
endif (DEMO)

add_subdirectory (lwbase)

add_subdirectory (raytracer)
add_subdirectory (modelconverter)

add_subdirectory (tinker)
add_subdirectory (tengine)

add_subdirectory (digitanks)
